--- a/TintVision/res/values/strings.xml
+++ b/TintVision/res/values/strings.xml
@@ -10,5 +10,8 @@
     <string name="title_activity_overlay_settings">Overlay Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="opacity">Opacity</string>
+    <string name="colour">Colour</string>
+    <string name="defaultColour">#ffff00</string>
 
 </resources>
