Update: View colours changed and dyslexic friendly font is now being used

--- a/AndroidStudio/TintVision/app/src/main/res/values/strings.xml
+++ b/AndroidStudio/TintVision/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources>
 
     <string name="app_name">TintVision</string>
-    <string name="overlay_settings">Overlay Settings</string>
-    <string name="underliner_settings">Underliner Settings</string>
+    <string name="overlay_settings">Overlay</string>
+    <string name="underliner_settings">Underliner</string>
     <string name="toggle">On / off</string>
     <string name="title_activity_overlay_settings">Overlay Settings</string>
     <string name="hello_world">Hello world!</string>
