Update: Code cleanup.

--- a/AndroidStudio/TintVision/app/src/main/res/values-fr/strings.xml
+++ b/AndroidStudio/TintVision/app/src/main/res/values-fr/strings.xml
@@ -7,7 +7,7 @@
     <string name="action_settings">Paramètres</string>
     <string name="opacity">Opacité</string>
     <string name="colour">Couleur</string>
-    <string name="title_activity_underliner_settings">Paramètres de l'underliner</string>
+    <string name="title_activity_underliner_settings">Paramètres de l\'underliner</string>
     <string name="thickness">Épaisseur</string>
     <string name="width">Largeur</string>
     <string name="pick_colour">Choisir la couleur</string>
