Update: Missing string entries in language files.

--- a/AndroidStudio/TintVision/app/src/main/res/values-de/strings.xml
+++ b/AndroidStudio/TintVision/app/src/main/res/values-de/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">TintVision</string>
+    <string name="defaultColour">#ffff00</string>
+    <string name="defaultUnderlinerColour">#000000</string>
     <string name="overlay_settings">Überlagerung</string>
     <string name="underliner_settings">Unterstreichen</string>
     <string name="toggle">Umschalten</string>
