--- a/AndroidStudio/TintVision/app/src/main/res/values-es/strings.xml
+++ b/AndroidStudio/TintVision/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">TintVision</string>
+    <string name="defaultColour">#ffff00</string>
+    <string name="defaultUnderlinerColour">#000000</string>
     <string name="overlay_settings">Cubrir</string>
     <string name="underliner_settings">Subrayar</string>
     <string name="toggle">Cazonete</string>
